<resources>
    <string size="36" name="app_name">FountainAR</string>
    <string name="further">Weiter</string>
    <string name="fill_out_first">Bitte beantworten Sie erst alle Fragen.</string>
    <string name="no_backing">Kein Zurückkehren möglich</string>
    <string name="study_not_backable">Sie können aus studientechnischen Gründen nicht innerhalb der App zurückkehren.</string>
    <string name="app_logo">App Logo</string>
    <string name="play_button">Play Button</string>
    <string name="app_instructions">Vielen Dank, dass Sie an dieser Studie teilnehmen und viel Spaß\nbeim Durchlaufen von FountainAR!</string>
    <string name="dq_title">Demographischer Fragebogen</string>
    <string name="dq_instructions">Bitte füllen Sie zunächst folgenden Fragebogen zu Ihren demographischen Daten aus und kreuzen Sie dabei Zutreffendes an.</string>
    <string name="dq_alternative_answer">Eigene Antwort:</string>
    <string name="dq_yes">Ja</string>
    <string name="dq_no">Nein</string>
    <string name="dq_maybe">Unsicher</string>
    <string name="dq_q1">Probandennummer:</string>
    <string name="dq_q2">Alter:</string>
    <string name="dq_q3">Geschlecht:</string>
    <string name="dq_q3_female">Weiblich</string>
    <string name="dq_q3_male">Männlich</string>
    <string name="dq_q3_diverse">Divers</string>
    <string name="dq_q3_no_answer">Keine Angabe</string>
    <string name="dq_q4">Muttersprache:</string>
    <string name="dq_q4_german">Deutsch</string>
    <string name="dq_q4_alternative_answer_hint">Sprache…</string>
    <string name="dq_q5">Beruf:</string>
    <string name="dq_q5_student">Student/-in mit Fachrichtung: </string>
    <string name="dq_q5_student_subject_hint">Studienfach…</string>
    <string name="dq_q5_pupil">Schüler/-in</string>
    <string name="dq_q5_employee">Angestellte/-r</string>
    <string name="dq_q5_official">Beamtin/Beamter</string>
    <string name="dq_q5_self_employed">Selbstständig</string>
    <string name="dq_q5_alternative_answer_hint">Tätigkeit…</string>
    <string name="dq_q6">Höchster Bildungsabschluss:</string>
    <string name="dq_q6_abitur">Abitur/Fachabitur</string>
    <string name="dq_q6_realschulabschluss">Realschulabschluss</string>
    <string name="dq_q6_hauptschulabschluss">Hauptschulabschluss</string>
    <string name="dq_q6_no_graduation">Kein Schulabschluss</string>
    <string name="dq_q6_professional_training">Abgeschlossene Berufsausbildung</string>
    <string name="dq_q6_polytechnic_degree">Fachhochschulabschluss (Bachelor, Master, etc.)</string>
    <string name="dq_q6_college_degree">Universitätsabschluss (Bachelor, Master, etc.)</string>
    <string name="dq_q6_alternative_answer_hint">Abschluss…</string>
    <string name="dq_q7">Wissen Sie, was Augmented Reality ist?</string>
    <string name="dq_q8">Welche Vorerfahrung mit Augmented-Reality-Anwendungen haben Sie?</string>
    <string name="dq_q9">Welche Vorerfahrung mit Smartphone-Anwendungen zu Kunstgegenständen haben Sie?</string>
    <string name="dq_routinely">Ich nutze solche Anwendungen regelmäßig.</string>
    <string name="dq_already_used">Ich habe solche Anwendungen schon mal benutzt.</string>
    <string name="dq_known">Ich kenne solche Anwendungen.</string>
    <string name="dq_no_usage">Ich hatte bisher keinen Kontakt zu solchen Anwendungen.</string>
    <string name="dq_experience_hint">Vorerfahrung…</string>
    <string name="dq_log_answer">Antwort: </string>
    <string name="dq_log_question">Frage: </string>
    <string name="stor_permission_needed">Speicher-Zugriff für Sammlung der Studiendaten erforderlich.</string>
    <string name="models_loading">3D-Modell wird geladen…</string>
    <string name="ar_placing_object">Platzierung des 3D-Objektes</string>
    <string name="faculty_fountain">Fakultätenbrunnen, Heinrich Kirchner, 1968</string>
    <string name="ar_quiz_loading">Blicke ein wenig mit der Kamera umher, damit das 3D-Objekt des Brunnens platziert werden kann.</string>
    <string name="ar_quiz_instructions">Super! Hier sehen Sie nun ein Modell des Fakultätenbrunnens der Universität Regensburg. Nachfolgend werden Sie sich das Objekt genauer ansehen und einige Fragen zu diesem in einem kleinen Multiple-Choice-Quiz beantworten.</string>
    <string name="ar_further">Weiter</string>
    <string name="ar_missing_answer">Bitte entscheide Dich zunächst für eine Antwortmöglichkeit.</string>
    <string name="start">Los geht\'s</string>
    <string name="ar_question_task1">Wie viele Einzeldarstellungen, die jeweils rechteckig umrahmt sind, sind auf dem Brunnen abgebildet?</string>
    <string name="ar_answer_task1_1">6</string>
    <string name="ar_answer_task1_2">8</string>
    <string name="ar_answer_task1_3">10</string>
    <string name="ar_answer_task1_4">12</string>
    <string name="ar_question_task2">Wieviele Standfüße hat der Brunnen?</string>
    <string name="ar_answer_task2_1">5</string>
    <string name="ar_answer_task2_2">6</string>
    <string name="ar_answer_task2_3">7</string>
    <string name="ar_answer_task2_4">8</string>
    <string name="ar_question_task3">Aus welchem Material besteht der Brunnen?</string>
    <string name="ar_answer_task3_1">Holz</string>
    <string name="ar_answer_task3_2">Plastik</string>
    <string name="ar_answer_task3_3">Bronze</string>
    <string name="ar_answer_task3_4">Glas</string>
    <string name="install_arcore">Bitte installieren Sie ARCore.</string>
    <string name="update_arcore">Bitte updaten Sie ARCore.</string>
    <string name="update_app">Bitte updaten Sie diese App.</string>
    <string name="ar_not_supported">Dieses Gerät unterstützt kein AR.</string>
    <string name="ar_session_failed">AR-Sitzung konnte nicht erstellt werden.</string>
    <string name="cam_not_available">Kamera nicht verfügbar. Versuchen Sie, die App neu zu starten.</string>
    <string name="proguard_error">Die Standortbibliothek der Google Play-Dienste ist nicht mit Proguard verknüpft oder verschleiert.</string>
    <string name="no_permission_fine_location">Die Android-Berechtigung für genaue Standortermittlung wurde nicht erteilt.</string>
    <string name="geospatial_not_supported">Dieses Gerät unterstützt die Geospatial-API nicht.</string>
    <string name="cam_or_network_error">Kamerafehler oder die Internetberechtigung wurde nicht erteilt.</string>
    <string name="session_create_or_config_error">Fehler beim Konfigurieren und Fortsetzen der Sitzung.</string>
    <string name="vps_check_error">Fehler beim Überprüfen der VPS-Verfügbarkeit.</string>
    <string name="cam_permission_needed">Kameraberechtigung erforderlich.</string>
    <string name="cubemap_filter_failed">Fehler beim Aufsetzen des Cubemap-Filters: </string>
    <string name="back_rend_failed">Fehler beim Aufsetzen des Renderings: </string>
    <string name="read_asset_failed">Fehler beim Lesen eines erforderlichen Assets: </string>
    <string name="opengl_version_required">Die App benötigt OpenGl Version 3.0 oder neuer.</string>
    <string name="loc_permission_needed">Genaue Standortberechtigung erforderlich</string>
    <string name="read_stor_needed">Lesen im externen Speicher erforderlich</string>
    <string name="write_stor_needed">Schreiben im externen Speicher erforderlich.</string>
    <string name="cam_and_loc_needed">Diese App benötigt Kamera-und Standortberechtigung.</string>
    <string name="error_create_anchor">Fehler beim Erstellen des Terrain-Ankers</string>
    <string translatable="false" name="depth_use_explanation">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
    <string translatable="false" name="button_text_enable_depth">Enable</string>
    <string translatable="false" name="button_text_disable_depth">Disable</string>
    <string translatable="false" name="options_title_with_depth">Your device supports depth</string>
    <string translatable="false" name="options_title_without_depth">Your device does not support depth</string>
    <string name="tam_questionnaire">Technologieakzeptanz-Fragebogen</string>
    <string name="tam_instructions">Abschließend geben Sie bitte an, wie sehr Sie jeder der folgenden Aussagen auf der vorgegebenen Skala zustimmen beziehungsweise wie Sie die Anwendung bewerten. Im Sinne der Verwendung eines anerkannten Fragebogens handelt es sich um eine englische Originalfassung.</string>
    <string name="tam_default_question">Question</string>
    <string name="tam_strongly_disagree">Strongly\nDisagree</string>
    <string name="tam_strongly_agree">Strongly\nAgree</string>
    <string name="tam_numeric_scale">1 \t\t\u0020\u0020 2\t\t\t\u0020\u00203 \t\t\t\u00204\t\t\t5\t\t\t\u0020 6\t\t\t 7</string>
    <string name="tam_finished_button">Fertig</string>
    <string name="tam_time_spent">"Time spent for this questionnaire in seconds: "</string>
    <string name="tam_pu1">By using the app, I can more quickly and easily find 3D models of art objects.</string>
    <string name="tam_pu2">By using the app, I learn more about art objects.</string>
    <string name="tam_pu3">By using the app, I can quickly find 3d models of art objects from places nearby.</string>
    <string name="tam_pu4">By using the app, I am more likely to find 3d models of art objects that interest me.</string>
    <string name="tam_peou1">Interaction with the app is clear and understandable.</string>
    <string name="tam_peou2">Interaction with the app does not require a lot of mental effort.</string>
    <string name="tam_peou3">I find the app easy to use.</string>
    <string name="tam_peou4">I find it easy to get the app to do what I want it to do.</string>
    <string name="tam_pe1">Rate how enjoyable the app is for you.</string>
    <string name="tam_pe2">Rate how exciting the app is for you.</string>
    <string name="tam_pe3">Rate how pleasant the app is for you.</string>
    <string name="tam_pe4">Rate how interesting the app is for you.</string>
    <string name="tam_disgusting">Disgusting</string>
    <string name="tam_enjoyable">Enjoyable</string>
    <string name="tam_unpleasant">Unpleasant</string>
    <string name="tam_pleasant">Pleasant</string>
    <string name="tam_boring">Boring</string>
    <string name="tam_interesting">Interesting</string>
    <string name="tam_dull">Dull</string>
    <string name="tam_exciting">Exciting</string>
    <string name="tam_bi1">I intend to use the app on a smartphone.</string>
    <string name="tam_bi2">I predict that I will use the app on a smartphone.</string>
    <string name="tam_bi3">I intend to use the app on a tablet.</string>
    <string name="tam_bi4">I predict that I will use the app on a tablet.</string>
    <string name="tam_bi5">I intend to use the app in a city I visit as a tourist.</string>
    <string name="tam_bi6">I predict that I will use the app in a city I visit as a tourist.</string>
    <string name="tam_bi7">I intend to use the app in my hometown.</string>
    <string name="tam_bi8">I predict that I will use the app in my hometown.</string>
    <string name="study_end">Der Studiendurchlauf ist hiermit beendet.\n\nVielen Dank für Ihre Teilnahme!</string>
    <string name="error_loading_3D_model">3D Model can not be loaded</string>
    <string  name="share_experience_title">AR in Echtzeit</string>
    <string name="share_experience_message">Zur Nutzung dieser App wird Google visuelle Daten deiner Kamera verarbeiten.</string>
    <string name="learn_more">Weitere Informationen</string>
    <string translatable="false" name="learn_more_url">https://developers.google.com/ar/data-privacy</string>
    <string  name="vps_unavailable_title">VPS nicht verfügbar.</string>
    <string name="vps_unavailable_message">Ihr aktueller Standort hat keine VPS-Abdeckung. Ihre Sitzung verwendet Ihr GPS-Signal nur, wenn VPS nicht verfügbar ist.</string>
    <string name="continue_button">Weiter</string>
    <string name="agree_to_share">Alles klar</string>
</resources>