<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="bottom"
    android:orientation="vertical"
    android:configChanges="screenSize|orientation|screenLayout|smallestScreenSize|uiMode"
    android:launchMode="singleTask"
    tools:context= "com.example.fountainar.activities.ARActivity">

    <android.opengl.GLSurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/ar_quiz_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color_middle"
        android:text="@string/ar_placing_object"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationZ="10dp" />

    <RelativeLayout
        android:id="@+id/ar_layout_instructions"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:elevation="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ar_layout_instructions_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ar_quiz_loading"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/ar_tv_task"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/ar_question_task1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <RadioGroup
            android:id="@+id/ar_rg_task"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ar_tv_task"
            android:layout_centerInParent="true"
            android:layout_marginTop="-10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ar_answer_task1_1"
                android:textColor="@color/black" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ar_answer_task1_2"
                android:textColor="@color/black" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ar_answer_task1_3"
                android:textColor="@color/black" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="-25dp"
                android:text="@string/ar_answer_task1_4"
                android:textColor="@color/black" />

        </RadioGroup>

        <Button
            android:id="@+id/ar_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:elevation="10dp"
            android:text="@string/start"
            android:layout_marginBottom="15dp"
            android:background="@drawable/basic_button"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>