<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/faculty_banner" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/study_end"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/exit_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:background="@drawable/oval_button_shadow"
        android:contentDescription="@string/play_button"
        android:elevation="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/check_button"
        app:tint="@color/primary_color_light" />

</LinearLayout>