<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-138dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/app_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/primary_color_middle"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/oval_button_shadow"
        android:contentDescription="@string/play_button"
        android:elevation="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/play_button"
        app:tint="@color/primary_color_light" />

</LinearLayout>