<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tam_layout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tam_questionnaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color_middle"
        android:text="@string/tam_questionnaire"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="1dp" />

    <TextView
        android:id="@+id/tam_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="5dp"
        android:text="@string/tam_instructions"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:background="@color/gray_light"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="550dp"/>

    <Button
        android:id="@+id/tam_finished_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:text="@string/further"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:background="@drawable/basic_button"/>

</LinearLayout>
