<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/tam_default_question"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tam_verbal_scale_left"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_gravity="center_vertical"
            android:textSize="11sp"
            android:text="@string/tam_strongly_disagree"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/answer_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="-2dp">

            <RadioButton
                android:id="@+id/answer_1"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/answer_2"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/answer_3"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/answer_4"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/answer_5"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/answer_6"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/answer_7"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tam_verbal_scale_right"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_gravity="center_vertical"
            android:textSize="11sp"
            android:text="@string/tam_strongly_agree"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:text="@string/tam_numeric_scale"
        android:textColor="@color/black" />

</LinearLayout>